gitops/pipelines/webhook-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: el-github-webhook-listener
  namespace: ebpf-security
  labels:
    app.kubernetes.io/managed-by: EventListener
    app.kubernetes.io/part-of: Triggers
    eventlistener: github-webhook-listener
spec:
  type: NodePort
  ports:
    - name: http-listener
      port: 8080
      protocol: TCP
      targetPort: 8080
      nodePort: 30082
  selector:
    app.kubernetes.io/managed-by: EventListener
    app.kubernetes.io/part-of: Triggers
    eventlistener: github-webhook-listener
